--- a/Hotel Management System/nbproject/project.properties
+++ b/Hotel Management System/nbproject/project.properties
@@ -37,12 +37,14 @@ endorsed.classpath=
 excludes=
 file.reference.derby.jar=../Tutorial8/lib/derby.jar
 file.reference.derbyclient.jar=../Tutorial8/lib/derbyclient.jar
+file.reference.itext-5.0.5.jar=../../../../Downloads/itext-5.0.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.derby.jar}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.itext-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
